fix apiGateway and userService